# parkncharge_edge

./: .gitignore  AppInstance.h  BoardController.cpp  BoardController.h  CMakeCache-8.0.txt  CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  CameraInfo.cpp  CameraInfo.h  CascadeClassifier.cpp  CascadeClassifier.h  IGenericDetector.cpp  IGenericDetector.h  IMessageData.cpp  IMessageData.h  INetworkHandler.cpp  INetworkHandler.h  IOUtils.cpp  IOUtils.h  IOccupancyDetector.cpp  IOccupancyDetector.h  IPlateDetector.cpp  IPlateDetector.h  ImageNetClassifier.cpp  ImageNetClassifier.h  LPR.cpp  LPR.h  Light.cpp  Light.h  MainInterface.cpp  MainInterface.h  Makefile  Makefile~  MessageData.h  MessageQueue.cpp  MessageQueue.h  MotionDetection.cpp  MotionDetection.h  (+53 more)
back/: MainInterface.cpp  MainInterface.h  inference_mobilenet_tf.py
core/: allpos.xml  allposempty54stage17.xml  allposempty54stage18.xml  front_real.xml  front_real_hs.xml  openalpr.conf  parkingspots.json  parkingspots.json.bkup  parkingspots.json_demo  parkingspots.json~  parkingspots_black_car.json  parkingspots_dummy.json  parkingspots_logi_1_191010.json  serverdata.xml  serverdata.xml-bkup  serverdata.xml.bak-qisenstest2g  serverdata.xml.bkup  settings.ini
darknet/: Makefile  darknet  libdarknet.so.notrecognized
log/: VisionSensor.ERROR  VisionSensor.FATAL  VisionSensor.INFO  VisionSensor.WARNING  VisionSensor.jnano5.ubuntu.log.INFO.20191001-131103.4233  VisionSensor.jnano5.ubuntu.log.INFO.20191001-131239.4350  VisionSensor.jnano5.ubuntu.log.INFO.20191001-131345.4429  VisionSensor.jnano5.ubuntu.log.INFO.20191001-131825.4725  VisionSensor.jnano5.ubuntu.log.INFO.20191001-132140.4961  VisionSensor.jnano5.ubuntu.log.INFO.20191001-132416.5149  VisionSensor.jnano5.ubuntu.log.INFO.20191001-132826.5755  VisionSensor.jnano5.ubuntu.log.INFO.20191001-141421.10227  VisionSensor.jnano5.ubuntu.log.INFO.20191001-142120.12318  VisionSensor.jnano5.ubuntu.log.INFO.20191001-142751.13750  VisionSensor.jnano5.ubuntu.log.INFO.20191001-143450.14191  VisionSensor.jnano5.ubuntu.log.INFO.20191001-144937.18037  VisionSensor.jnano5.ubuntu.log.INFO.20191001-151516.27521  VisionSensor.jnano5.ubuntu.log.INFO.20191001-151950.29238  VisionSensor.jnano5.ubuntu.log.INFO.20191001-153934.4211  VisionSensor.jnano5.ubuntu.log.INFO.20191002-095914.6360  VisionSensor.jnano5.ubuntu.log.INFO.20191002-102506.8590  VisionSensor.jnano5.ubuntu.log.INFO.20191002-102552.8779  VisionSensor.jnano5.ubuntu.log.INFO.20191002-113611.13253  VisionSensor.jnano5.ubuntu.log.INFO.20191002-124428.17713  VisionSensor.jnano5.ubuntu.log.INFO.20191002-131329.18400  VisionSensor.jnano5.ubuntu.log.INFO.20191002-133026.19105  VisionSensor.jnano5.ubuntu.log.INFO.20191002-133614.19283  VisionSensor.jnano5.ubuntu.log.INFO.20191002-134130.19582  VisionSensor.jnano5.ubuntu.log.INFO.20191002-140747.20604  VisionSensor.jnano5.ubuntu.log.INFO.20191002-143848.21363  VisionSensor.jnano5.ubuntu.log.INFO.20191002-145515.21749  VisionSensor.jnano5.ubuntu.log.INFO.20191002-151928.22322  VisionSensor.jnano5.ubuntu.log.INFO.20191002-164245.7780  VisionSensor.jnano5.ubuntu.log.INFO.20191002-165102.7932  VisionSensor.jnano5.ubuntu.log.INFO.20191002-171523.8779  VisionSensor.tegra-ubuntu.ubuntu.log.ERROR.20000101-000224.2171  VisionSensor.tegra-ubuntu.ubuntu.log.ERROR.20000101-000241.2409  VisionSensor.tegra-ubuntu.ubuntu.log.ERROR.20000101-000733.2150  VisionSensor.tegra-ubuntu.ubuntu.log.ERROR.20000101-090323.3099  VisionSensor.tegra-ubuntu.ubuntu.log.ERROR.20180607-120952.5162  (+1103 more)
model/: label_map.pbtxt
runtime_data/config/: us.conf
