cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 14)
project(VisionSensor)
find_package(OpenSSL REQUIRED)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
set(TARGET_CPP CameraInfo.cpp CascadeClassifier.cpp IMessageData.cpp INetworkHandler.cpp IOccupancyDetector.cpp IOUtils.cpp LPR.cpp MessageQueue.cpp ParkingSpot.cpp ParkingSpotManager.cpp ParkingUpdateMessage.cpp SecureClient.cpp SensorInfo.cpp SerialVideoReader.cpp ServerNetworkHandler.cpp ServerSyncMessage.cpp Settings.cpp TCPSocketListener.cpp Utils.cpp)
add_executable(VisionSensor main.cpp MainInterface.cpp ${TARGET_CPP})
set(BOOST_LIB_LIST -lboost_system -lboost_thread -lboost_chrono -lboost_date_time -lboost_filesystem)
include_directories(${OPENSSL_INCLUDE_DIR})
include_directories(/usr/include/glog)
target_link_libraries(VisionSensor ${OPENSSL_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES} ${BOOST_LIB_LIST} -lpthread -lglog -openalpr)
